0.7.0 (currently working on)
- [#2502] Change: Update copyrights to 2009
- [#2477] Fix: Icon for CSV export of event data missing from mod2
- [#2429] Feature: On the registration page, list the requirements for a registration if they are not fulfilled
- [#2491] Feature: Add a class tx_seminars_mod2_BackEndModule
- [#2415] Feature: In the single view, add a part "Required for"
- [#2428] Feature: Add a function for checking whether a user fulfillls all requirements for a registration
- [#2414] Feature: In the single view, add a part "Requirements"
- [#2393] Feature: Add a field "requirements" to topics
- [#1634] Change: Rename some table constants of m:n tables for consistency
- [#393] Change: Use getListViewConfValue* in pi1
- [#768] Change: Use real visibility keywords (public/protected/private)
- [#2215] Fix: Problems with Page Browser
- [#2479] Fix: $this->internal['orderByList'] is set but never read in tx_seminars_pi1
- [#2475] Fix: Unused variable $registrationDeadline in registrationManager::getRegistrationLink
- [#2095] Fix: Unused variable $seats in registrationManager::createRegistration
- [#910] Change: Remove all university-specific stuff
- [#2322] Feature: Create an autoloader for models and other classes
- [#2417] Feature: CreateFrontEndUser should automatically create a group if needed
- [#2326] Fix: Test failures: testRenderCanContainLanguageOption and testRenderCanContainCountryOption
- [#2327] Fix: FE Editor will not allow me to edit oder enter events
- [#2409] Change: Hide the flavor "favorites" from the "what_to_display" drop-down in the Seminars flexforms
- [#2377] Change: Sort the categories in the event list and detail view by the sorting chosen in the BE
- [#2378] Change: Add a conflict with date2cal
- [#2367] Feature: In the event FE single view, use a gender-dependent heading
- [#1772] Feature: Add constants for frequently used error messages
- [#2376] Change: Fine-tune the display of the categories in the event list view